provision/openstack/scripts/deploy/osrm.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geo-berlin
spec:
  replicas: 1
  template:
    metadata:
      labels:
        api: geo-berlin
    spec:
      containers:
      - name: osrm-api-berlin
        image: cartography/osrm-backend-docker:latest
        ports:
        - containerPort: 5000
        args:
        - osrm
        - label
        - "http://download.geofabrik.de/europe/germany/berlin-latest.osm.pbf"
