provision/openstack/scripts/deploy/geo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geo-ingress
spec:
  rules:
  - host: autoscaler.ci.apprendalabs.com
    http:
      paths:
      - backend:
          serviceName: geo-berlin-svc
          servicePort: 8500
